src/test/ui/const-generics/min_const_generics/default_trait_param.stderr
error: default values for const generic parameters are unstable
  --> $DIR/default_trait_param.rs:1:30
   |
LL | trait Foo<const KIND: bool = true> {}
   |                              ^^^^
   |
   = help: add `#![feature(const_generics_defaults)]` to the crate attributes to enable

error: aborting due to previous error

