src/test/ui/const-generics/min_const_generics/default_trait_param.rs
trait Foo<const KIND: bool = true> {}
//~^ ERROR default values for const generic parameters are unstable

fn main() {}
